# Q-A-ChatBot

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
1.1 OpenAI QA Chatbot/: main.py
1.2 Ollama QA Chatbot/: main.py
1.3 RAG QA Chatbot/: app.py
1.4 Conversational App/: app.py
1.5 Search Engine/: app.py
1.5 Search Engine/agents_and_tools/: agents_and_tools.ipynb
1.6 Text Summarization/: app.py  text_summary.ipynb
1.7 MathGPT/: app.py
1.8 Huggingface & Langchain/: HFwithLangchain.ipynb  pdf_QueryLangchain.ipynb
