[tool.poetry]
name = "qa chatbot"
version = "1.1.0"
description = "Question and Answer Chatbot"
authors = ["Muhammad Awais"]
license = "QA-1.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
